# resonate-sdk-py

./: .gitignore  .ruff.toml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  all-documents.html  apidocs-help.html  app.py  app1.py  app2.py  bug.txt  classIndex.html  db.sql  db.sql-shm  db.sql-wal  example_schedule.py  foo.py  fullsearchindex.json  index.html  invariants.py  justfile  moduleIndex.html  nameIndex.html  objects.inv  pyproject.toml  resonate  resonate-sdk-go  resonate-sdk-rs  resonate-sdk-ts  resonate.Context.html  resonate.DurablePromise.html  resonate.Handle.html  resonate.Options.html  resonate.Promise.html  resonate.Resonate.html  resonate.actions.All.html  resonate.actions.AllSettled.html  resonate.actions.Call.html  resonate.actions.DI.html  (+375 more)
.github/workflows/: API_REF.yml  CD.yml  CI.yml  api_ref.yml  cd.yml  ci.yml  dst.yml
docs/: README.md  architecture.md  concurrent-id-determinism.md  pydoctor.ini
docs/source/: conf.py  index.rst  modules.rst  resonate.dst.rst  resonate.rst  resonate.tracing.rst
examples/: README.md
examples/concat/: __main__.py
examples/detached/: __main__.py
examples/detached-nats/: __main__.py
examples/error-handling/: __main__.py
examples/error-handling-nats/: __main__.py
examples/fibonacci/: __main__.py
examples/fibonacci-nats/: __main__.py
examples/hello/: __main__.py
examples/hello-world/: __main__.py
examples/human-in-the-loop/: README.md  __main__.py  app.py  pyproject.toml
examples/human-in-the-loop-nats/: __main__.py
examples/logical-groups/: README.md  app.py  pyproject.toml  worker.py
examples/nats/: __main__.py
examples/pipeline/: README.md  __main__.py
examples/pipeline-nats/: __main__.py
examples/polling/: __main__.py
examples/polling-nats/: __main__.py
examples/pydantic/: __main__.py
examples/pydantic-ai/: __main__.py
examples/race-condition/: README.md  pyproject.toml
examples/race-condition/src/race_condition/: __init__.py
examples/race-condition/tests/: test_race_condition.py
examples/recovery/: README.md  __main__.py
examples/recovery-nats/: __main__.py
examples/remote-functions/: README.md  pyproject.toml
examples/retries/: README.md  __main__.py
examples/retries-nats/: __main__.py
examples/rpc/: __main__.py
examples/rpc-nats/: __main__.py
examples/saga/: README.md  __main__.py
examples/saga-nats/: __main__.py
examples/structured-concurrency/: __main__.py
examples/structured-concurrency-nats/: __main__.py
examples/task-queue/: README.md  app.py  pyproject.toml  worker.py
examples/user-auth/: README.md  app.py  pyproject.toml
examples/validation/: README.md  __main__.py
examples/versioning/: README.md  __main__.py  app.py  pyproject.toml
examples/versioning-nats/: __main__.py
resonate/: __init__.py  bridge.py  context.py  coroutine.py  delay_q.py  delay_queue.py  dependencies.py  errors.py  function.py  graph.py  logging.py  options.py  processor.py  registry.py  resonate.py  scheduler.py  scheduler2.py  simulator.py  utils.py
resonate/clocks/: __init__.py  step.py  wall.py
resonate/conventions/: __init__.py  base.py  default.py  local.py  remote.py  sleep.py
resonate/encoders/: __init__.py  base64.py  chain.py  combined.py  header.py  json.py  jsonpickle.py  noop.py  pair.py
resonate/errors/: __init__.py  errors.py
resonate/loggers/: __init__.py  context.py  dst.py
resonate/models/: task.py  (+23 more)
sam/: .gitignore  README.md  template.yaml
scripts/: brandnew.py  bump-version.py  calculator.py  check-versions.py  ds.py  golden_device_lfi.py  issue.py  lds.py  mypy_issue.py  new-release.py  otel_adapter.py  sd.py
sim/: simulator.py
tests/: conftest.py  runners.py  test_auth.py  test_auto.py  test_aws.py  test_bridge.py  test_callback_storage.py  test_chain.py  test_codec.py  test_collections.py  test_context.py  test_core.py  test_delay_q.py  test_delay_queue.py  test_dependencies.py  test_dependency_injection.py  test_dst.py  test_dst_scheduler.py  test_durable.py  test_effects.py  test_encoder.py  test_encoders.py  test_equivalencies.py  test_error_handling.py  test_error_pickle.py  test_execute_until_blocked.py  test_features.py  test_foo.py  test_functionality.py  test_futures.py  test_handle.py  test_heartbeat.py  test_info.py  test_invariants.py  test_lineage.py  test_network.py  test_other_sheduler.py  test_platform_errors.py  test_processor.py  test_promise.py  (+30 more)
(+176 files in other folders)
