[project]
name = "resonate-sdk"
version = "0.7.1"
description = "Distributed Async Await by Resonate HQ, Inc"
readme = "README.md"
authors = [{ name = "Resonate HQ, Inc", email = "contact@resonatehq.io" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "msgspec>=0.21.1",
]

[project.optional-dependencies]
nats = ["nats-py>=2.6.0"]

[project.urls]
Documentation = "https://github.com/resonatehq/resonate-sdk-py#readme"
Issues = "https://github.com/resonatehq/resonate-sdk-py/issues"
Source = "https://github.com/resonatehq/resonate-sdk-py"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "resonate"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
    "attrs>=24.0.0",
    "pydantic>=2.0.0",
    "vulture>=2.16",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
