[project]
name = "resonate-sdk"
version = "0.7.4"
description = "Distributed Async Await by Resonate HQ, Inc"
readme = "README.md"
authors = [{ name = "Resonate HQ, Inc", email = "contact@resonatehq.io" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5,<4",
    "msgspec>=0.21.1,<1",
]

[project.optional-dependencies]
nats = ["nats-py>=2.6.0,<3"]
pydantic = ["pydantic>=2.0.0,<3"]
pydantic-ai = [
    "pydantic-ai-slim>=2.8,<3",
    "pydantic>=2.0.0,<3",
]

[project.urls]
Documentation = "https://github.com/resonatehq/resonate-sdk-py#readme"
Issues = "https://github.com/resonatehq/resonate-sdk-py/issues"
Source = "https://github.com/resonatehq/resonate-sdk-py"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "resonate"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.14",
    "ty>=0.0.39",
    "attrs>=24.0.0",
    "pydantic>=2.0.0",
    "vulture>=2.16",
    "pytest-cov>=7.1.0",
    "pydantic-ai-slim[mcp]>=2.8",
    "aws-lambda-typing>=2.20.0",
    "packaging>=24",
]

[tool.coverage.run]
source = ["resonate", "resonate_aws"]
